--- a/index1.html
+++ b/index1.html
@@ -1,7 +1,7 @@
 <html>
   <body>
      <title> Зоотрополіс </title>
-<link rel="stylesheet" href="style.css"/>
+<link rel="stylesheet" href="style1.css"/>
   <h1>  Зоотрополіс</h1>
   <iframe width="500" height="300" src="https://www.youtube.com/embed/_aij6XVrKco" title="ЗООТРОПОЛІС  / ЗООТРОПОЛИС. Трейлер 3 (український)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen> </iframe>
   <h3>Джуді Гопс — Джінніфер Гудвін</h3>
