--- a/index3.html
+++ b/index3.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-
+<link rel="stylesheet" href="style3.css"/>
   <h1>Головоломка </h1>
  <iframe width="600" height="400" src="https://www.youtube.com/embed/LGMMX-I6oUM" title="Думками навиворіт 3D (Inside Out) 2015. Український трейлер [1080p]" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
  
